--- a/index.html
+++ b/index.html
@@ -5,24 +5,47 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portfolio</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Portifolio</title>
+  <link rel="stylesheet" href="./styles/style.css">
 </head>
 
 <body>
-  <header></header>
+  <header class="cabecalho">
+    <nav class="cabecalho__menu">
+      <a class="cabecalho__menu__link" href="index.html">Home</a>
+      <a class="cabecalho__menu__link" href="about.html">Sobre mim</a>
+    </nav>
+  </header>
   <main class="apresentacao">
     <section class="apresentacao__conteudo">
-      <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro nível <strong class="titulo-destaque">com um Front-end de qualidade!</strong></h1>
-      <p class="apresentacao__conteudo__texto">Olá! Sou Joana Santos, desenvolvedora Front-end com especialidade em React, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
+      <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro nível<strong class="titulo-destaque">com um Front-end de qualidade!
+        </strong></h1>
+      <p class="apresentacao__conteudo__texto">Olá! Sou Joana Santos, desenvolvedora
+        Front-end com especialidade em React, HTML e
+        CSS. Ajudo pequenos negócios e designers a
+        colocarem em prática boas ideias. Vamos
+        conversar?</p>
       <div class="apresentacao__links">
-        <a class="apresentacao__links__link" href="https://www.instagram.com/">Instagram</a>
-        <a class="apresentacao__links__link" href="https://github.com/">Github</a>
+        <h2 class="apresentacao__links__subtitulo">Acesse minhas redes</h2>
+        <a class="apresentacao__links__link" href="https://github.com/rafaballerini">
+          <img src="./assets/github.png">
+          Github
+        </a>
+        <a class="apresentacao__links__link" href="https://linkedin.com/in/rafaellaballerini">
+          <img src="./assets/linkedin.png">
+          linkedin
+        </a>
+        <a class="apresentacao__links__link" href="https://twitch.tv/guilimadev">
+          <img src="./assets/twitch.png">
+          Twitch
+        </a>
       </div>
     </section>
-    <img src="Imagem.png" alt="Foto da Joana Santos programando">
+    <img src="./assets/imagem.png" alt="Foto da Joana Santos programando">
   </main>
-  <footer></footer>
+  <footer class="rodape">
+    <p>Desenvolvido por Alura.</p>
+  </footer>
 </body>
 
 </html>
